# rekrypt

./: .gitignore  .npmignore  COPYRIGHT  Cargo.toml  LICENSE_SETUP.md  Makefile  README-ops.md  README.md
.devin/: wiki.json
.github/workflows/: docs.yml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  EXAMPLES.md  INTERNALS.md  SECURITY.md  STREAMING.md
examples/: index.html  package.json  pnpm-lock.yaml  proxy-reencryption.html  server.js
rekrypt-ffi/: Cargo.toml  README.md
rekrypt-ffi/src/: lib.rs
scripts/: enhance-pkg.js  prepare-release.sh
service/: Dockerfile  README.md  go.mod  main.go
service/lib/: librekrypt_transform.d
service/transform/: Cargo.toml  build.sh
service/transform/src/: lib.rs
src/: crypto.rs  errors.rs  helpers.rs  i18n.rs  keys.rs  keystore.rs  lib.rs  serialization.rs  streaming.rs  types.rs  validation.rs
transform-service/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  go.mod  main.go
transform-service/rekrypt/: rekrypt.go
