[package]
name = "rekrypt"
version = "0.2.0"
edition = "2021"
description = "代理重加密技术的 WebAssembly SDK - Proxy Re-Encryption for Web"
authors = ["Your Name <your.email@example.com>"]
license = "AGPL-3.0"
repository = "https://github.com/yourusername/rekrypt"
homepage = "https://github.com/yourusername/rekrypt"
keywords = ["cryptography", "proxy-re-encryption", "wasm", "encryption", "security"]
categories = ["cryptography", "wasm", "web-programming"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

rand = {version ="0.6.5",features = ["wasm-bindgen"]}
bip39 = { version = "2.0", features = ["rand"] }
hmac = "0.12"
sha2 = "0.10"
aes-gcm = "0.10"
rand_chacha = "0.9.0"
thiserror = "2.0.12"
console_error_panic_hook = "0.1.7"
serde-wasm-bindgen = "0.6.5"
recrypt = { version = "0.14.1", features = ["wasm"] }
postcard = { version = "1.1.1", features = ["use-std"] }
pbkdf2 = { version = "0.12", default-features = false, features = ["simple"] }
hkdf = "0.12"
subtle = "2.5"
zeroize = { version = "1.8", features = ["derive"] }
[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "z" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]
[patch.crates-io]
recrypt={path="crates/recrypt-rs"}
[workspace]
members = ["crates/recrypt-rs"]
