[package]
name = "rekrypt"
version = "1.0.1"
edition = "2021"
rust-version = "1.70"
description = "Professional proxy re-encryption library based on Curve25519 for Rust and WebAssembly"
authors = ["stevenleep"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/stevenleep/rekrypt"
homepage = "https://github.com/stevenleep/rekrypt"
documentation = "https://docs.rs/rekrypt"
readme = "README.md"
keywords = ["cryptography", "proxy-re-encryption", "curve25519", "end-to-end", "wasm"]
categories = ["cryptography", "wasm", "web-programming"]
exclude = [
    "pkg/",
    "target/",
    "rekrypt-ffi/",
    "transform-service/",
    "scripts/",
    ".github/",
    ".gitignore",
    "Makefile",
    "*.md",
    "!README.md"
]

[badges]
maintenance = { status = "actively-developed" }

[lib]
crate-type = ["cdylib", "rlib"]
name = "rekrypt"
path = "src/lib.rs"
doctest = true

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

rand = { version = "0.8", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }
bip39 = { version = "2.0", features = ["rand"] }
hmac = "0.12"
sha2 = "0.10"
aes-gcm = "0.10"
thiserror = "2.0.12"
console_error_panic_hook = "0.1.7"
serde-wasm-bindgen = "0.6.5"
recrypt = { version = "0.14.1", features = ["wasm"] }
postcard = { version = "1.1.1", features = ["use-std"] }
pbkdf2 = { version = "0.12", default-features = false, features = ["simple"] }
hkdf = "0.12"
subtle = "2.5"
zeroize = { version = "1.8", features = ["derive"] }
[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "z" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 1

[package.metadata.docs.rs]
all-features = true
targets = ["wasm32-unknown-unknown"]
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
  "-O4",
  "--enable-bulk-memory",
  "--enable-nontrapping-float-to-int",
  "--enable-sign-ext"
]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false  # 开发模式禁用优化，加快构建速度
